--- a/pom.xml
+++ b/pom.xml
@@ -8,56 +8,104 @@
   <name>azzimov-search Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
+  <properties>
+    <spring.boot.version>2.0.0.M6</spring.boot.version>
+    <spring.core.version>5.0.1.RELEASE</spring.core.version>
+    <junit.version>4.12</junit.version>
+    <java.version>1.8</java.version>
+    <surefire.plugin.version>2.20.1</surefire.plugin.version>
+    <compiler.plugin.version>3.7.0</compiler.plugin.version>
+    <resources.plugin.version>3.0.2</resources.plugin.version>
+    <apache.commons.lang3.version>3.0</apache.commons.lang3.version>
+    <azzimov.search.common.version>1.0-SNAPSHOT</azzimov.search.common.version>
+  </properties>
+
+
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.5.8.RELEASE</version>
+    <version>2.0.0.M6</version>
   </parent>
 
-  <properties>
-    <client.name>accent</client.name>
-  </properties>
 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>4.0.0</version>
-      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>4.3.12.RELEASE</version>
+      <version>${spring.core.version}</version>
     </dependency>
 
-    <dependency>
+    <dependency>Uni
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-      <version>1.5.8.RELEASE</version>
+      <version>${spring.boot.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-logging</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
+
+    <!--<dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-log4j2</artifactId>
+      <version>${spring.boot.version}</version>
+    </dependency>-->
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
-      <version>1.5.8.RELEASE</version>
+      <version>${spring.boot.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.azzimov.search.common</groupId>
+      <artifactId>azzimov-query-result</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>2.10.0</version>
+      <type>pom</type>
     </dependency>
 
 
     <dependency>
-      <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-actor_2.11</artifactId>
-      <version>2.5.6</version>
+      <groupId>com.azzimov.search.common</groupId>
+      <artifactId>azzimov-search-cache</artifactId>
+      <version>${azzimov.search.common.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.azzimov.search.common</groupId>
+      <artifactId>azzimov-search-dto</artifactId>
+      <version>${azzimov.search.common.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.azzimov.search.common</groupId>
+      <artifactId>azzimov-search-util</artifactId>
+      <version>${azzimov.search.common.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>${apache.commons.lang3.version}</version>
+    </dependency>
+
   </dependencies>
+
 
   <build>
     <finalName>azzimov-search</finalName>
@@ -65,16 +113,46 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>${compiler.plugin.version}</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
 
       <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <includes>
+            <include>**/*.class</include>
+          </includes>
+          <groups>
+            com.azzimov.search.annotation.type.IntegrationTest
+          </groups>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${surefire.plugin.version}</version>
+        <configuration>
+          <includes>
+            <include>**/*.class</include>
+          </includes>
+          <excludedGroups>
+            com.azzimov.annotation.type.IntegrationTest
+          </excludedGroups>
+        </configuration>
       </plugin>
 
       <plugin>
@@ -88,7 +166,7 @@
             </goals>
             <configuration>
               <sources>
-                <source>src/clients/${client.name}</source>
+                <source>src/clients/cantrex</source>
               </sources>
             </configuration>
           </execution>
@@ -97,7 +175,7 @@
 
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>3.0.2</version>
+        <version>${resources.plugin.version}</version>
         <executions>
           <execution>
             <id>copy-client-resource</id>
@@ -106,10 +184,10 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${basedir}/target/classes/${client.name}</outputDirectory>
+              <outputDirectory>${basedir}/target/classes/cantrex</outputDirectory>
               <resources>
                 <resource>
-                  <directory>src/clients/${client.name}</directory>
+                  <directory>src/clients/cantrex/main/resources</directory>
                   <excludes>
                     <exclude>**/*.java</exclude>
                   </excludes>
@@ -119,7 +197,6 @@
           </execution>
         </executions>
       </plugin>
-
     </plugins>
   </build>
 </project>
