Committing all the new implements in search.

--- a/src/main/resources/configurations/akka_configurations.conf
+++ b/src/main/resources/configurations/akka_configurations.conf
@@ -5,10 +5,17 @@ akka {
     mailbox-push-timeout-time = 10s
   }
 
-  actor.deployment {
-    /router_feedback {
-      router = round-robin-pool
-      nr-of-instances = 5
+  actor {
+    deployment {
+      /router_feedback {
+        router = round-robin-pool
+        nr-of-instances = 5
+      }
+
+      /router_search {
+        router = round-robin-pool
+        nr-of-instances = 2
+      }
     }
   }
 }
