--- a/src/main/resources/configurations/system.conf
+++ b/src/main/resources/configurations/system.conf
@@ -4,10 +4,10 @@ es.cluster.name = Azzimov ES 565 Dev
 es.hosts = ["deves56.eastus.cloudapp.azure.com"]
 es.port = 9300
 
-es.index.ecom.name = ecom
-es.index.feedback.name = feedback
-es.index.synonym.name = synonym
-es.index.autocomplete.name = autocomplete
-es.index.association.name = association
-es.index.dtl.name = dtl
+es.ecom.index= ecom-client-expr
+es.feedback.index = feedback-client
+es.synonym.index = synonym-client
+es.autocomplete.index = autocomplete-client
+es.association.index = association-client
+es.dtl.index = dtl-client
 es.search.timeout = 30000
