Committing all the new implements in search. Also resolved the router issue where routers could not find sender info to return results.

--- a/src/main/resources/configurations/search.conf
+++ b/src/main/resources/configurations/search.conf
@@ -1,9 +1,11 @@
 
 search.languages = ["en_US", "fr_CA"]
 search.document.types = ["product", "store"]
-search.document.target.indexes = [{"product" : "ecom", "store" : "ecom",
+search.document.target.indexes = [
+  {"product" : "ecom", "store" : "ecom",
   "product_feedback" : "feedback",
-  "query_feedback" : "feedback"}]
+  "query_feedback" : "feedback",
+  "guidance_feedback" : "feedback"}]
 search.results.max.results.per.page=100
 search.results.max.offset=5000
 
@@ -25,4 +27,11 @@ query.should.min.match = [{"search.title":75,
   "search.long_description":85
 }]
 
-feedback.document.target.indexes = [{"product_feedback" : "feedback", "query_feedback" : "feedback"}]
+query.sort.fields = [
+  {"title" : "title",
+    "date" : "date_modified",
+    "price" : "lowest_price",
+    "guidance_feedback" : "feedback"}
+]
+
+feedback.document.target.indexes = [{"product_feedback" : "feedback", "query_feedback" : "feedback", "guidance_feedback" : "feedback"}]
