Committing all the new implements in search. This includes all the new structure on search & query creation for product search

--- a/src/main/resources/configurations/search.conf
+++ b/src/main/resources/configurations/search.conf
@@ -2,36 +2,60 @@
 search.languages = ["en_US", "fr_CA"]
 search.document.types = ["product", "store"]
 search.document.target.indexes = [
-  {"product" : "ecom", "store" : "ecom",
-  "product_feedback" : "feedback",
-  "query_feedback" : "feedback",
-  "guidance_feedback" : "feedback"}]
-search.results.max.results.per.page=100
-search.results.max.offset=5000
+  {
+    "product": "ecom",
+    "retailer": "ecom",
+    "product_feedback": "feedback",
+    "query_feedback": "feedback",
+    "guidance_feedback": "feedback"
+  }]
+search.results.max.results.per.page = 100
+search.results.max.offset = 5000
 
-query.boost = [{"search.title":25.0,
-  "search.attribute.label":3.00,
-  "search.attribute.value":7.00,
-  "search.category.name":15.0,
-  "search.all":1.00,
-  "search.short_description":8.00,
-  "search.long_description":8.00
-}]
-
-query.should.min.match = [{"search.title":75,
-  "search.attribute.label":75,
-  "search.attribute.value":75,
-  "search.category.name":75,
-  "search.all":100,
-  "search.short_description":85,
-  "search.long_description":85
-}]
-
-query.sort.fields = [
-  {"title" : "title",
-    "date" : "date_modified",
-    "price" : "lowest_price",
-    "guidance_feedback" : "feedback"}
+query.boost = [
+  {
+    "search.title": 25.0,
+    "search.attribute.label": 3.00,
+    "search.attribute.value": 7.00,
+    "search.category.name": 15.0,
+    "search.all": 1.00,
+    "search.short_description": 8.00,
+    "search.long_description": 8.00
+  }
 ]
 
-feedback.document.target.indexes = [{"product_feedback" : "feedback", "query_feedback" : "feedback", "guidance_feedback" : "feedback"}]
+query.should.min.match = [
+  {
+    "search.title": 75,
+    "search.attribute.label": 75,
+    "search.attribute.value": 75,
+    "search.category.name": 75,
+    "search.all": 100,
+    "search.short_description": 85,
+    "search.long_description": 85
+  }
+]
+
+query.sort.fields = [
+  {
+    "title": "title",
+    "date": "date_modified",
+    "price": "lowest_price",
+    "guidance_feedback": "feedback"
+  }
+]
+
+query.aggregation.limit = [
+  {
+    "search.categories.limit": 5000,
+    "search.attributes.limit": 5000
+  }
+]
+
+feedback.document.target.indexes = [
+  {
+    "product_feedback": "feedback",
+    "query_feedback": "feedback",
+    "guidance_feedback": "feedback"
+  }
+]
