Intergrate cache related configs and creation of cache related components/services. Next we will integrate retrieving the guidance learning model (old version) and use it creating query based on relevance.

--- a/src/main/resources/configurations/system.conf
+++ b/src/main/resources/configurations/system.conf
@@ -11,3 +11,9 @@ es.autocomplete.index = autocomplete-client
 es.association.index = association-client
 es.dtl.index = dtl-client
 es.search.timeout = 30000
+
+
+couch.server.nodes=["dev.fe1.azzimov.com"]
+couch.buckets=["cache_feedback"]
+couch.cache.expiration=1000
+couch.port=8091
