--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>com.azzimov.trinity.common</groupId>
+      <artifactId>trinity-learning</artifactId>
+      <version>1.5-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>2.10.0</version>
