Contains changes of adding the centroid models and integrating them in the queries.

--- a/src/main/resources/configurations/search.conf
+++ b/src/main/resources/configurations/search.conf
@@ -4,11 +4,9 @@ search.document.types = ["product", "store"]
 search.document.target.indexes = [
   {
     "product": "ecom",
-    "retailer": "ecom",
-    "product_feedback": "feedback",
-    "query_feedback": "feedback",
-    "guidance_feedback": "feedback"
-  }]
+    "retailer": "ecom"
+  }
+]
 search.results.max.results.per.page = 100
 search.results.max.offset = 5000
 
@@ -36,15 +34,6 @@ query.should.min.match = [
   }
 ]
 
-query.sort.fields = [
-  {
-    "title": "title",
-    "date": "date_modified",
-    "price": "lowest_price",
-    "guidance_feedback": "feedback"
-  }
-]
-
 query.aggregation.limit = [
   {
     "search.categories.limit": 5000,
@@ -59,3 +48,7 @@ feedback.document.target.indexes = [
     "guidance_feedback": "feedback"
   }
 ]
+
+search.learn.centroid.keys = ["guidance-learning-model"]
+search.guidance.centroid.cluster.max.weight = 0.05
+search.learning.centroid.verctor.max=15
