Finalized changes for now for the multi guidance selections.

--- a/src/main/resources/configurations/akka_configurations.conf
+++ b/src/main/resources/configurations/akka_configurations.conf
@@ -16,6 +16,11 @@ akka {
         router = round-robin-pool
         nr-of-instances = 5
       }
+
+      /router_aggregate {
+        router = round-robin-pool
+        nr-of-instances = 5
+      }
     }
   }
 }
