fix null pointer exception

--- a/src/main/resources/configurations/system.conf
+++ b/src/main/resources/configurations/system.conf
@@ -4,7 +4,7 @@ es.cluster.name = Azzimov ES 565 Dev
 es.hosts = ["deves56.eastus.cloudapp.azure.com"]
 es.port = 9300
 
-es.ecom.index= ecom-client-expr
+es.ecom.index= ecom-cantrex
 es.feedback.index = feedback-client
 es.synonym.index = synonym-client
 es.autocomplete.index = autocomplete-client
@@ -17,3 +17,4 @@ couch.server.nodes=["prod.azzi.escb1.azzimov.com"]
 couch.buckets=["demo1-cache"]
 couch.cache.expiration=1000
 couch.port=8091
+
