Integrate session learning model manager and its functionality to Azzimov Search.

--- a/src/main/resources/configurations/akka_configurations.conf
+++ b/src/main/resources/configurations/akka_configurations.conf
@@ -21,6 +21,11 @@ akka {
         router = round-robin-pool
         nr-of-instances = 5
       }
+
+      /router_session_learn {
+        router = round-robin-pool
+        nr-of-instances = 3
+      }
     }
   }
 }
