--- a/src/main/resources/configurations/search.conf
+++ b/src/main/resources/configurations/search.conf
@@ -52,3 +52,10 @@ feedback.document.target.indexes = [
 search.learn.centroid.keys = ["guidance-learning-model"]
 search.guidance.centroid.cluster.max.weight = 0.05
 search.learning.centroid.verctor.max=15
+
+
+search.session.learning.cache.key = "session-learning-centroid-model"
+search.session.learning.time.decay.factor = 600.0
+search.session.learning.product.factor = 2
+search.session.learning.cluster.max.weight = 0.01
+search.session.learning.guidance.factor = 5
