Add product view effect to session centroid models. Make few more improvements.

--- a/src/main/resources/configurations/search.conf
+++ b/src/main/resources/configurations/search.conf
@@ -59,3 +59,5 @@ search.session.learning.time.decay.factor = 600.0
 search.session.learning.product.factor = 2
 search.session.learning.cluster.max.weight = 0.01
 search.session.learning.guidance.factor = 5
+search.session.attribute.fr.max=0.01
+search.session.attribute.fr.min=0.0005
