--- a/src/main/resources/configurations/system.conf
+++ b/src/main/resources/configurations/system.conf
@@ -1,19 +1,19 @@
 
 
 es.cluster.name = Azzimov ES 565 Dev
-es.hosts = ["deves56.eastus.cloudapp.azure.com"]
+es.hosts = ["qa.newsearch.azzimov.com"]
 es.port = 9300
 
-es.ecom.index= ecom-cantrex
-es.feedback.index = feedback-client
-es.synonym.index = synonym-client
-es.autocomplete.index = autocomplete-client
-es.association.index = association-client
-es.dtl.index = dtl-client
+es.ecom.index= ecom-qa
+es.feedback.index = feedback-qa
+es.synonym.index = synonym-qa
+es.autocomplete.index = autocomplete-qa
+es.association.index = association-qa
+es.dtl.index = dtl-qa
 es.search.timeout = 30000
 
 
-couch.server.nodes=["prod.azzi.escb2.azzimov.com"]
+couch.server.nodes=["qa.newsearch.azzimov.com"]
 couch.buckets=["azzimov-new-gen-cache"]
 couch.cache.expiration=1000
 couch.port=8091
