--- a/src/main/resources/configurations/system.conf
+++ b/src/main/resources/configurations/system.conf
@@ -13,7 +13,7 @@ es.dtl.index = dtl-qa
 es.search.timeout = 30000
 
 
-couch.server.nodes=["qa.newsearch.azzimov.com"]
+couch.server.nodes=["prod.azzi.escb2.azzimov.com"]
 couch.buckets=["azzimov-new-gen-cache"]
 couch.cache.expiration=1000
 couch.port=8091
