Add spell check feature to the new generation search.

--- a/src/main/resources/configurations/akka_configurations.conf
+++ b/src/main/resources/configurations/akka_configurations.conf
@@ -26,6 +26,11 @@ akka {
         router = round-robin-pool
         nr-of-instances = 3
       }
+
+      /router_suggest_autocomplete {
+        router = round-robin-pool
+        nr-of-instances = 2
+      }
     }
   }
 }
