--- a/src/main/resources/configurations/system.conf
+++ b/src/main/resources/configurations/system.conf
@@ -4,7 +4,7 @@ es.cluster.name = Azzimov ES 565 Dev
 es.hosts = ["deves56.eastus.cloudapp.azure.com"]
 es.port = 9300
 
-es.ecom.index= ecom-cantrex
+es.ecom.index= ecom-cantrex-suggest
 es.feedback.index = feedback-client
 es.synonym.index = synonym-client
 es.autocomplete.index = autocomplete-client
