Fix issues with configuration dto.

--- a/src/main/resources/configurations/system.conf
+++ b/src/main/resources/configurations/system.conf
@@ -1,20 +1,20 @@
 
 
 es.cluster.name = Azzimov ES 565 Dev
-es.hosts = ["deves56.eastus.cloudapp.azure.com"]
+es.hosts = ["10.3.0.4"]
 es.port = 9300
 
-es.ecom.index= ecom-cantrex-suggest
-es.feedback.index = feedback-client
-es.synonym.index = synonym-client
-es.autocomplete.index = autocomplete-client
-es.association.index = association-client
-es.dtl.index = dtl-client
+es.ecom.index= ecom-demo
+es.feedback.index = feedback-demo
+es.synonym.index = synonym-demo
+es.autocomplete.index = autocomplete-demp
+es.association.index = association-demo
+es.dtl.index = dtl-demo
 es.search.timeout = 30000
 
 
-couch.server.nodes=["prod.azzi.escb1.azzimov.com"]
-couch.buckets=["azzimall-trinity-cache"]
+couch.server.nodes=["10.3.0.4"]
+couch.buckets=["demo-cache"]
 couch.cache.expiration=1000
 couch.port=8091
 
